# CrabApplication

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: AddDotnetProject.cmake  AddDotnetSupport.cmake  CopyIfExists.cmake
resources/: 1.scene  2.scene  22.scene  3.scene  BlankMat.res  BowlingAlley.scene  FunnyMaterial.res  NewMaterialResource.res  NewStandardMaterial.res  PhysObjectMat.res  ResourceLoading.scene  SolarSystem.scene  Test.scene  TestMinimal.scene  TestNativeSpinner.scene  eee.scene  funnyscene.scene  geg.scene  geg2.scene  geg3.scene  materialTest.scene  physTest.scene  testShader.wgsl  testShader.wgsl.importSettings  testphysicsScene.scene  testphysicsScene3.scene  testphysicsScene4.scene  tete.scene
resources/Materials/: FunnyMaterial.res  M_Jens.res  M_Message.res
resources/Materials/PlanetMaterials/: M_Earth.res  M_Jupiter.res  M_Mars.res  M_Mercury.res  M_Neptune.res  M_Saturn.res  M_Sun.res  M_Uranus.res  M_Venus.res
resources/Meshes/: M_BowlingBall.res  M_BowlingPin.res  SM_BowlingPin.mtl
resources/Prefabs/: BowlingPin.scene  CameraController.scene
resources/Scenes/: BowlingAlley.scene  BowlingPin.scene  test.scene
resources/Shaders/: planet_shader.slang  sun_shader.slang
script/CrabApplication/: BobberNode.cs  CrabApplication.csproj  EntryPoint.cs  SpinnerNode.cs
script/CrabEngine/: CrabEngine.csproj  ScriptEngine.cs  Types.cs
script/CrabModule/: CameraController.cs  CrabModule.csproj  EntryPoint.cs  NuGet.config
script/Scripts/: Node.cs  Node3D.cs  Object.cs  PropertyAccessor.cs  Resource.cs  ScriptHost.cs  Scripts.csproj  TestScriptNode.cs  Types.cs
src/: NativeSpinnerNode.cppm  NodeContentBrowserPanel.cpp  NodeContentBrowserPanel.cppm  NodeEditorCamera3D.cpp  NodeEditorCamera3D.cppm  NodeEditorCamera3D.h  NodeEditorSceneRoot.cpp  NodeEditorSceneRoot.cppm  NodeEditorSceneRoot.h  NodeEditorUI.cpp  NodeEditorUI.cppm  NodeEditorUI.h  NodeInspectorUI.cpp  NodeInspectorUI.cppm  NodeInspectorUI.h  NodeSceneTreeUI.cpp  NodeSceneTreeUI.cppm  NodeSceneTreeUI.h  NodeViewportUI.cpp  NodeViewportUI.cppm  NodeViewportUI.h  PropertyDrawUtility.cpp  PropertyDrawUtility.cppm  PropertyDrawUtility.h  TestMaterial.cpp  TestMaterial.h  main.cpp
src/AssetEditors/: AssetEditor.cppm  AssetEditorRegistry.cpp  AssetEditorRegistry.cppm  MaterialEditor.cpp  MaterialEditor.cppm  SceneFileEditor.cpp  SceneFileEditor.cppm
src/Theme/: ThemeManager.cpp  ThemeManager.cppm  ThemeManager.h
